# TraceDeck

./: .gitignore  CLAUDE.md  DEV.md  README.md  RELEASE.md  electron-migration.md  run.sh  stt.py
.claude/skills/: icon-generator.md
TraceDeck.xcodeproj/: project.pbxproj
TraceDeck/Analysis/: ActivityAgentManager.swift  AnalysisClient.swift  AnalysisManager.swift  PiAgentManager.swift
TraceDeck/App/: AppDelegate.swift  AppIdentity.swift  AppState.swift  TraceDeckApp.swift
TraceDeck/Audio/: AudioCaptureManager.swift  AudioRecorder.swift  Transcriber.swift
TraceDeck/Notch/: NotchOverlayController.swift
TraceDeck/Recording/: ActiveDisplayTracker.swift  EventTriggerMonitor.swift  ImageDiff.swift  ScreenRecorder.swift  StorageManager.swift
TraceDeck/System/: PermissionsManager.swift  Shortcuts.swift  StatusBarController.swift
TraceDeck/Views/: MainView.swift  PermissionsOnboardingView.swift  SettingsView.swift  StatusMenuView.swift
TraceDeckTests/: TraceDeckTests.swift
TraceDeckUITests/: TraceDeckUITests.swift  TraceDeckUITestsLaunchTests.swift
activity-agent/: .gitignore  PI_INTEGRATION.md  README.md  SOUL.md  TODO.md  package.json
activity-agent/docs/: app-control.md  learned-rules.md
activity-agent/scripts/: eval-models.ts  test-index.ts
activity-agent/src/: activity-agent.ts  audio-context.ts  cli.ts  index.ts  learned-rules.ts  (+6 more)
homebrew/: monitome.rb
scripts/: build-release.sh  copy-agent.sh  update-icons.sh
service/: design_debate.md  main.py  pyproject.toml
service/baml_src/: clients.baml  functions.baml  generators.baml  types.baml
(+4 files in other folders)
